--- a/faryal 2/index.html
+++ b/faryal 2/index.html
@@ -76,7 +76,7 @@
         <p>Order online and pick it up hot and fresh from your nearest branch.</p>
       </div>
       <div class="pickup-card">
-        <img src="https://www.kfcpakistan.com/images/63fb28b0-9627-11ef-b835-bd990eec9c91-Krunch-combocopy-2024-10-29185539.png" alt="Delivery">
+        <img src="https://restaurants.kfc.co.in/kfc_image/rider.png" alt="Delivery">
         <h3>Delivery</h3>
         <p>Get your cravings delivered right to your doorstep, fast and fresh.</p>
       </div>
